--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title,"About")%>
+<title><%=yield(:title)%> | Ruby on Rails Tutorial Sample App</title>
 <h1>About</h1>
 <p>
   The <a href="https://www.railstutorial.org/"><em>Ruby on Rails
